--- a/OpenSourceEvents-iOS/OpenSourceEvents-iOS/Base.lproj/Main.storyboard
+++ b/OpenSourceEvents-iOS/OpenSourceEvents-iOS/Base.lproj/Main.storyboard
@@ -34,27 +34,38 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Wk-5d-KhZ">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="147.33333333333334"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Open Source Events &amp; Hackathons" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="BGE-bA-Kxa">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Open Source Events &amp; Hackathons" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="BGE-bA-Kxa">
                                         <rect key="frame" x="8" y="8" width="398" height="78"/>
                                         <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="30"/>
                                         <color key="textColor" red="0.0" green="0.35686274509999999" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Month : &lt;current month&gt;" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dnY-b6-OaS">
-                                        <rect key="frame" x="10" y="110.33333333333333" width="394" height="34.999999999999986"/>
-                                        <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="22"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Month :" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="2sR-pv-enS">
+                                        <rect key="frame" x="106" y="91" width="298" height="51.333333333333343"/>
+                                        <fontDescription key="fontDescription" name="TimesNewRomanPS-BoldMT" family="Times New Roman" pointSize="22"/>
+                                        <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                                        <color key="highlightedColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="assignment.gif" translatesAutoresizingMaskIntoConstraints="NO" id="UmK-lo-mGq">
+                                        <rect key="frame" x="50" y="93.333333333333329" width="46" height="45.999999999999986"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="46" id="HwZ-ab-jDo"/>
+                                            <constraint firstAttribute="height" constant="46" id="QMT-Jb-IdL"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="dnY-b6-OaS" firstAttribute="leading" secondItem="8Wk-5d-KhZ" secondAttribute="leading" constant="10" id="0dq-7K-jAZ"/>
-                                    <constraint firstAttribute="trailing" secondItem="BGE-bA-Kxa" secondAttribute="trailing" constant="8" id="Gug-6u-m8c"/>
-                                    <constraint firstItem="BGE-bA-Kxa" firstAttribute="top" secondItem="8Wk-5d-KhZ" secondAttribute="top" constant="8" id="VaB-J7-hJv"/>
-                                    <constraint firstAttribute="bottom" secondItem="dnY-b6-OaS" secondAttribute="bottom" constant="2" id="igI-TE-FsR"/>
-                                    <constraint firstItem="BGE-bA-Kxa" firstAttribute="leading" secondItem="8Wk-5d-KhZ" secondAttribute="leading" constant="8" id="j06-vO-MsL"/>
-                                    <constraint firstAttribute="trailing" secondItem="dnY-b6-OaS" secondAttribute="trailing" constant="10" id="mYQ-OX-LU1"/>
+                                    <constraint firstItem="2sR-pv-enS" firstAttribute="top" secondItem="BGE-bA-Kxa" secondAttribute="bottom" constant="5" id="1mA-MW-trr"/>
+                                    <constraint firstItem="UmK-lo-mGq" firstAttribute="leading" secondItem="8Wk-5d-KhZ" secondAttribute="leading" constant="50" id="4xA-nD-qxT"/>
+                                    <constraint firstItem="BGE-bA-Kxa" firstAttribute="top" secondItem="8Wk-5d-KhZ" secondAttribute="top" constant="8" id="Iev-uT-296"/>
+                                    <constraint firstAttribute="trailing" secondItem="BGE-bA-Kxa" secondAttribute="trailing" constant="8" id="RY2-Se-uEF"/>
+                                    <constraint firstAttribute="trailing" secondItem="2sR-pv-enS" secondAttribute="trailing" constant="10" id="XSe-zN-rig"/>
+                                    <constraint firstItem="BGE-bA-Kxa" firstAttribute="height" secondItem="8Wk-5d-KhZ" secondAttribute="height" multiplier="0.529412" id="aWf-7b-wl8"/>
+                                    <constraint firstItem="BGE-bA-Kxa" firstAttribute="leading" secondItem="8Wk-5d-KhZ" secondAttribute="leading" constant="8" id="c2t-br-kPi"/>
+                                    <constraint firstAttribute="bottom" secondItem="2sR-pv-enS" secondAttribute="bottom" constant="5" id="eRz-ap-Pnm"/>
+                                    <constraint firstAttribute="bottom" secondItem="UmK-lo-mGq" secondAttribute="bottom" constant="8" id="i3h-LC-P4R"/>
+                                    <constraint firstItem="2sR-pv-enS" firstAttribute="leading" secondItem="UmK-lo-mGq" secondAttribute="trailing" constant="10" id="kYH-gC-RVu"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BiI-TX-8BE">
@@ -102,15 +113,15 @@
                                         <rect key="frame" x="0.0" y="279.66666666666669" width="414" height="198.66666666666669"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hackathons :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7d4-Cx-2fL">
-                                                <rect key="frame" x="10" y="0.0" width="394" height="24.666666666666668"/>
+                                                <rect key="frame" x="10" y="0.0" width="394" height="24"/>
                                                 <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="21"/>
                                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="KOM-Q0-ZKj">
-                                                <rect key="frame" x="8" y="30.666666666666629" width="400" height="167"/>
+                                                <rect key="frame" x="8" y="30" width="400" height="167.66666666666666"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -186,6 +197,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Ubg-e7-REq"/>
                     </view>
+                    <connections>
+                        <outlet property="gifview" destination="UmK-lo-mGq" id="Z8b-ml-YMj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pni-IO-Y68" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -209,4 +223,7 @@
             <point key="canvasLocation" x="137.68115942028987" y="118.52678571428571"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="assignment.gif" width="107" height="92"/>
+    </resources>
 </document>
